# ormMySQL

./: .env.example  AUTHORS  LICENSE  README.md  __init__.py  pyproject.toml
.github/workflows/: test.yml
orm/: __init__.py  abstract_model.py  condition_types.py  dtypes.py  dynamic_module.py  model_base.py  repository_my_sql.py
orm/dissambler/: __init__.py  dissambler.py  nested_element.py  tree_instruction.py
orm/interfaces/: IDelete.py  IInsert.py  IQuery.py  IRepositoryBase.py  ISQL.py  ISQLStatements.py  ISelect.py  IStatements.py  IUpsert.py  IWhere.py  __init__.py
orm/orm_objects/: __init__.py  column.py  dissambler.py  foreign_key.py  name_of.py  table.py
orm/table/: column_info.py  table.py
orm/utils/: condition_types.py  dtypes.py  foreign_key.py  table_constructor.py
src/ormlambda/: __init__.py  caster.py  env.py  errors.py  model_base.py  template.py  types.py
src/test/: __init__.py  config.py  conftest.py  dbcontext.py  env.py  playground.py  runner.py  test_GlobalChecker.py  test_ResolverType.py  test_ResolverType_new.py  test_abstract_model.py  test_cast.py  test_clause_info.py  test_code_first.py  test_column.py  test_column_proxy.py  test_comparer.py  test_concat.py  test_connection.py  test_constructor.py  test_create_backup.py  test_depth_first_search.py  test_disassembler.py  test_errors.py  test_group_by.py  test_join_query.py  test_join_statement.py  test_mapped_table.py  test_nested_element.py  test_new_context_select.py  test_new_select_clause.py  test_new_types.py  test_new_visitor_pattern.py  test_order.py  test_queries_with_different_datatypes.py  (+7 more)
test/: config.py  csv_table.csv  dbcontext.py  test_abstract_model.py  test_code_first.py  test_dbcontext.py  test_depth_first_search.py  test_disassembler.py  test_dissambler.py  test_foreign_key.py  test_mapped_table.py  test_my_sql.py  test_nested_element.py  test_query_selector.py  test_sakila.py  test_sql_statements.py  test_table_class.py  test_tree_instruction.py  test_type_hint.py  testing_dbcontext.py
(+510 files in other folders)
