[tool.ruff]
line-length = 320

[tool.poetry]
name = "ormlambda"
version = "3.34.9"
description = "ORM designed to interact with the database (currently with MySQL) using lambda functions and nested functions"
authors = ["p-hzamora <p.hzamora@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mysql-connector-python= "^9.0.0"
shapely = "^2.0.6"

[tool.poetry.group.test.dependencies]
fluent-validation = "4.3.1"
python-dotenv = "^1.0.1"
pandas = "^2.2.2"
ruff = "^0.4.5"
parameterized = "^0.9.0"
pydantic = "^2.11.1"
sqlserver = "^0.0.17.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
